informando negrito tabela estudantes

--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -296,8 +296,10 @@
         </tr>
       {% endfor %}
     </tbody>
+    <caption style="caption-side: bottom; font-size: 0.9em; padding-top: 1px; text-align: right;">
+      {% lng "Estudantes em negrito foram selecionados para a proposta" "Students in bold were selected for the proposal" %}
+    </caption>
   </table>
-
 
   <script>
       
