--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -159,7 +159,7 @@
         </a>
         <br>
         
-        {% include "display_notas_individuais.html" with notas=alocado|get_notas_alocacao2 %}
+        {% include "display_notas_individuais.html" with notas=alocado|get_notas_alocacao %}
         <br><br>
 
         {% with relatos=alocado|get_relatos %}
