--- a/projetos/templates/projetos/meuprojeto_estudantes.html
+++ b/projetos/templates/projetos/meuprojeto_estudantes.html
@@ -47,7 +47,7 @@
 
         {% include "projeto.html" %}
 
-        {% with notas=alocado|get_notas_alocacao2 %}
+        {% with notas=alocado|get_notas_alocacao %}
           {% if notas %}
             <div>
               <h5>{% lng "Resultados" "Results" %}</h5>
