melhorando nome de variaveis

--- a/professores/templates/professores/coorientadores_tabela_completa.html
+++ b/professores/templates/professores/coorientadores_tabela_completa.html
@@ -15,7 +15,7 @@
 
   <div class="table-responsive">
 
-    {% for professores,periodo in anos %} 
+    {% for professores, periodo in coorientadores_ano %} 
       <big>{{periodo}}</big>
       <table id="professores"class="table table-bordered table-hover table-sm" style="width: auto;">
         <thead class="table-info">
