--- a/projetos/templates/projetos/editar_projeto.html
+++ b/projetos/templates/projetos/editar_projeto.html
@@ -16,7 +16,6 @@
   <script src="{% static 'bootstrap-select-1.13.14/dist/js/bootstrap-select.min.js' %}"></script>
 
   <style>
-    table, tr, td {border: 0px solid black;}
     label {
       margin-bottom: 2px;
       line-height: 1.0;
@@ -49,20 +48,20 @@
          data-live-search="true" data-width="81%" data-size="10">
             <option selected value> -- selecione um orientador(a) -- </option>
             <optgroup label="Comitê Capstone">
-            {% for orientador in professores %}
-              {% if orientador.user.membro_comite %}
-                <option value="{{orientador.id}}" {% if orientador.id == projeto.orientador.id %}selected{% endif %}>
-                {{orientador.user.get_full_name}}
+            {% for prof in usuarios_professores %}
+              {% if prof.membro_comite %}
+                <option value="{{prof.id}}" {% if prof.id == projeto.orientador.user.id %}selected{% endif %}>
+                {{prof.get_full_name}}
               </option>
               {% endif %}
             {% endfor %}
             </optgroup>
 
             <optgroup label="Professores">
-            {% for orientador in professores %}
-              {% if not orientador.user.membro_comite %}
-                <option value="{{orientador.id}}" {% if orientador.id == projeto.orientador.id %}selected{% endif %}>
-                {{orientador.user.get_full_name}}
+            {% for prof in usuarios_professores %}
+              {% if not prof.membro_comite %}
+                <option value="{{prof.id}}" {% if prof.id == projeto.orientador.user.id %}selected{% endif %}>
+                {{prof.get_full_name}}
               </option>  
               {% endif %}
             {% endfor %}
@@ -71,89 +70,14 @@
         </select>
       </div>
 
-      <div style="margin-bottom: 6px;">
-        <label for="coorientador" style="width: 6em;"><small>
-          {% lng "Coorientador(a):" "Co-advisor:" %}
-        </small></label>
-        <select class="selectpicker show-tick" name="coorientador" id="coorientador" title="Selecione coorientador do projeto"
-         data-live-search="true" data-width="81%">
-            <option selected value> -- selecione um coorientador(a) -- </option>
-            {% for professor in professores %}
-              <option value="{{professor.user.id}}" {% if professor.user.id == coorientadores.last.usuario.id %}selected{% endif %}>
-                {{professor.user.get_full_name}}
-              </option>  
-            {% endfor %}
-        </select>
-      </div>
+      {% lng "Coorientador:" "Co-advisor:" %}<br>
+      {% include "users/includes/lista_usuarios.html" with nomes_col="Coorientador" nomes_col_en="Co-advisor" desc_col="Nome do Coorientador" desc_col_en="Co-advisor Name" pessoas=usuarios_professores usuarios_selecionados=usuarios_coorientadores %}
 
     </div>
     <br>
 
-    {% lng "Grupo:" "Group:" %}
-    <br>
-    <table id="AlocacaoEstudantes" style="margin-left: 12px; margin-right: 102px; table-layout: fixed; max-width: 95%; width: 740px;">
-      <thead>
-      <tr><td style="text-align: center; width: 6.5em;"><small>
-        {% lng "Estudante" "Student" %}
-        #</small></td>
-        <td style="text-align: center;"><small>
-          {% lng "Nome do Estudante" "Student Name" %}
-        </small></td>
-        <td style="width: 1em;"><span class="AddNew" style="cursor:pointer; margin-left: 4px;">&#10753;</span></td></tr>
-
-      </thead>
-      <tbody>
-      {% for alocacao in alocacoes %}
-        <tr>
-          <td>
-            <label for="estudante{{forloop.counter}}" style="white-space: nowrap; width: 1%;">
-              {% lng "Estudante" "Student" %}
-              <span style="width:1em; text-align:left; display:inline-block;">{{forloop.counter}}:</span></label>
-          </td>
-          <td>
-            <select class="selectpicker show-tick estudantes" name="estudante" id="estudante{{forloop.counter}}" title="Selecione estudante membro do projeto"
-            data-live-search="true" data-width="100%">
-                <option selected value> -- selecione estudante -- </option>
-                <optgroup label="Semestre Capstone">
-                {% for estudante in estudantes %}
-                  {% if estudante %}
-                    <option value="{{estudante.id}}" {% if estudante.id == alocacao.aluno.id %}selected{% endif %}>
-                    {{estudante.user.get_full_name}}
-                  </option>  
-                  {% endif %}
-                {% endfor %}
-                </optgroup>
-            </select>
-          </td>
-          <td>
-            <span class="RemoveRow" style="cursor:pointer; margin-left: 4px;">&#8861;</span>
-          </td>
-      </tr>
-    {% endfor %}
-    </tbody>
-    </table>
-
-    {% comment %} No usado para criar novas alocações {% endcomment %}
-    <table id="esconder">
-      <tr id="novo_no">
-        <td>Estudante 0: </td>
-        <td>
-          <select class="selectpicker show-tick estudantes" name="estudante" title="Selecione estudante membro do projeto"
-          data-live-search="true" data-width="100%">
-              <option selected value> -- selecione estudante -- </option>
-              <optgroup label="Semestre Capstone">
-              {% for estudante in estudantes %}
-                {% if estudante %}
-                  <option value="{{estudante.id}}">
-                  {{estudante.user.get_full_name}}
-                </option>  
-                {% endif %}
-              {% endfor %}
-              </optgroup>
-          </select>
-        </td>
-        <td><span class="RemoveRow" style="cursor:pointer; margin-left: 4px;">&#8861;</span></td>
-    </table>
+    {% lng "Grupo:" "Group:" %}<br>
+    {% include "users/includes/lista_usuarios.html" with nomes_col="Estudante" nomes_col_en="Student" desc_col="Nome do Estudante" desc_col_en="Student Name" pessoas=estudantes usuarios_selecionados=usuarios_estudantes_alocados %}
 
     <br>
     <label for="time_misto">
@@ -173,60 +97,5 @@
     
   </form>
 
-  <script>
-
-    $("#esconder").css("display","none");
-
-    function renumera() {
-      $("tr").each(function(){
-        var position= $("#AlocacaoEstudantes tr").index($(this))
-        if(position!=0) {
-          texto = '<label for="estudante' + position + '">{% lng "Estudante" "Student" %} <span style="width:1em;text-align:left;display:inline-block;">' + position + ':</span></label>';
-          $(this).children("td").first().html(texto);
-          {% include "linguas_ajax.html" %}
-        }
-      })
-    }
-
-    $(".AddNew").click(function(){        
-      var $cloned = $("#novo_no").clone();
-      $cloned.find(".bootstrap-select").replaceWith(function() { return $("select", this); })    
-      $cloned.find(".selectpicker").selectpicker("render"); 
-      $("#AlocacaoEstudantes tr:last").after($cloned);
-      renumera();
-      check_duplicado();
-    });
-    
-    $("table").on("click", ".RemoveRow", function(){
-      $(this).closest("tr").remove();
-      renumera();
-      check_duplicado();
-    });
-
-    function check_duplicado() {
-      $(".estudantes").change(function(){
-        var estudantes  = $(".estudantes > select")
-        var dic = {};
-        for(est in estudantes){
-          var chave = estudantes.eq(est).val()
-
-          if(typeof chave !== "undefined" && chave != "") {
-            if(chave in dic) {
-              $("#submit").prop("disabled",true);
-              $("#mensagem").html("Os estudantes devem ser diferentes");
-              return;
-            } else {
-              dic[chave] = true;
-            }
-          }
-        }
-        $("#submit").prop("disabled",false);
-        $("#mensagem").html("");
-      });  
-    }
-
-    check_duplicado();
-
-  </script>
 
 {% endblock %}
