calculo dos descontos por atraso sendo realizados

--- a/academica/templates/academica/academica.html
+++ b/academica/templates/academica/academica.html
@@ -47,6 +47,9 @@
         <a href="{% url 'exibir_ocultar_notas' %}"><li>
           {% lng "Exibir ou Ocultar Notas" "Show or Hide Grades" %}
         </li></a>
+        <a href="{% url 'descontos' %}"><li>
+          {% lng "Descontos" "Discounts" %}
+        </li></a>
       </ul>
     </li>
     
