--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -110,6 +110,11 @@
                 </a>
               </td>
 
+              <td>
+                <span lang="pt">{% language "pt-br" %}{{ media.descontos|floatformat:2}}{% endlanguage %}</span>
+                <span lang="en" style="display:none">{% language "en" %}{{ media.descontos|floatformat:2}}{% endlanguage %}</span>
+              </td> {% comment %} <!-- Descontos --> {% endcomment %}
+
               <td id="media{{aluno.id}}"> {% comment %} <!-- Média --> {% endcomment %}
 
                 <a href="{% url 'edita_notas' alocacao.id %}" target="_blank" rel="noopener noreferrer"
@@ -137,7 +142,7 @@
               </td>
             {% endwith %}
           {% else %}
-            <td></td><td></td>
+            <td></td><td></td><td></td>
           {% endif %}
         {% endwith %}
       </tr>
