sistema de desconto de notas por atrasos implementador

--- a/projetos/static/css/one_line.css
+++ b/projetos/static/css/one_line.css
@@ -23,6 +23,12 @@
   padding: 1px 5px 1px 5px;
 }
 
+.one-line .td_desc{
+  background-color: #ffe5e5;
+  font-weight: 500;
+  padding: 1px 5px;
+}
+
 .one-line td .long{
   display: none;
 }
