--- a/templates/display_notas_individuais.html
+++ b/templates/display_notas_individuais.html
@@ -22,50 +22,58 @@
 {% if user.eh_admin %}
   <a style="color:black" href="{% url 'edita_notas' alocado.id %}">
 {% endif %}
+
 {% if notas %}
 
-<div style="overflow-x: auto; width: 100%;">
-<table class="one-line" style="max-width: 100%;"><tbody>
-  <tr>
-    <td><b>{% lng "Avaliações" "Evaluations" %}</b></td>
-    {% comment %} {% for aval, nota, peso, descr in notas %} {% endcomment %}
-    {% for aval in notas %}
-      {% if alocado|exibe_notas:aval.sigla or not user.eh_estud  %} <!-- Filtra certas avaliações para estudantes não verem -->
-        <td style="cursor:pointer; white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
-        title="{{aval.nome}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in aval.objetivos.items %}&bull;{{o.titulo}} = <b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}">
-          <span class="short">{{aval.sigla}}</span><span class="long">{{aval.nome}}</span> = {% if aval.peso > 0 or aval.sigla == "P" %}{{aval.nota|floatformat:1}}{% else %}{% if aval.nota >= 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
-          {% if not forloop.last %}<span class="short">|</span>{% endif %}
-          {% if aval.peso > 0 %}
-            <script>
-              nota += {{aval.nota|unlocalize}} * {{aval.peso|unlocalize}};
-              peso += {{aval.peso|unlocalize}};
-            </script>
+  <div style="overflow-x: auto; width: 100%;">
+    <table class="one-line" style="max-width: 100%;">
+      <tbody>
+        <tr>
+          <td><b>{% lng "Avaliações" "Evaluations" %}</b></td>
+          {% comment %} {% for aval, nota, peso, descr in notas %} {% endcomment %}
+          {% for aval in notas %}
+            {% if alocado|exibe_notas:aval.sigla or not user.eh_estud  %} <!-- Filtra certas avaliações para estudantes não verem -->
+              <td style="cursor:pointer; white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
+              title="{{aval.nome}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in aval.objetivos.items %}&bull;{{o.titulo}} = <b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}">
+                <span class="short">{{aval.sigla}}</span><span class="long">{{aval.nome}}</span> = {% if aval.peso > 0 or aval.sigla == "P" %}{{aval.nota|floatformat:1}}{% else %}{% if aval.nota >= 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
+                {% if not forloop.last %}<span class="short">|</span>{% endif %}
+                {% if aval.peso > 0 %}
+                  <script>
+                    nota += {{aval.nota|unlocalize}} * {{aval.peso|unlocalize}};
+                    peso += {{aval.peso|unlocalize}};
+                  </script>
+                {% endif %}
+              </td>
+            {% endif %}
+          {% endfor %}
+
+          {% if descontos.0 > 0 %}
+            <td class="td_desc" style="cursor:pointer; white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
+                title="{% for e in descontos.1 %}&bull;{{e}}<br>{% endfor %}">
+              {% lng "Descontos" "Discounts" %} = {{descontos.0|floatformat:2}}
+            </td>
           {% endif %}
-        </td>
-      {% endif %}
-    {% endfor %}
-  
-    <td>
-    <b>
-      {% lng "Média Final" "Final Grade" %}
-      = <span id="media{{alocado.id}}"></span> <span id="aviso{{alocado.id}}"></span>
-    </b>    
+          
+          <td>
+            <b>{% lng "Média Final" "Final Grade" %} = <span id="media{{alocado.id}}"></span> <span id="aviso{{alocado.id}}"></span></b>    
+          </td>    
+
+        </tr>
+      </tbody>
+    </table>
+
     <script>
       if(peso > 0.0) {
         {% with media=alocado|get_media_alocacao:request %}
           {% if media %}
-            {% if media.media < 5 %}
-              document.getElementById("media{{alocado.id}}").innerHTML = "{{media.media|floatformat:2}}";
-            {% elif alocado|probation %}
-              document.getElementById("media{{alocado.id}}").innerHTML = "probation";
+            {% if media.probation %}
+              document.getElementById("media{{alocado.id}}").innerHTML = "probatório";
               {% if user.eh_admin %}
                 document.getElementById("media{{alocado.id}}").innerHTML += " ({{media.media|floatformat:2}})";
               {% endif %}
             {% else %}
               document.getElementById("media{{alocado.id}}").innerHTML = "{{media.media|floatformat:2}}";
             {% endif %}
-          {% else %}
-            document.getElementById("media{{alocado.id}}").innerHTML = loc(nota);
           {% endif %}
         {% endwith %}
         if(peso < 0.99) {
@@ -73,11 +81,7 @@
         }
       }
     </script>
-    </td>
-
-  </tr>
-</tbody></table></div>
-
+  </div>
 {% endif %}
 
 {% if user.eh_admin %}
