--- a/estudantes/templates/estudantes/estudantes.html
+++ b/estudantes/templates/estudantes/estudantes.html
@@ -109,6 +109,13 @@
   </a>
 </div>
 
+
+<div class="item_lista"><span class="circulo">&#9899;</span>
+  <a {% if not projeto and user.eh_estud %} class="disabled" onclick="showMessage('projeto')" {% else %} href="{% url 'reunioes' %}" {% endif %} >
+    {% lng "Registro de Reuniões" "Meeting Records" %}
+  </a>
+</div>
+
 <br>
 
 
