--- a/organizacoes/templates/organizacoes/parceiro_propostas.html
+++ b/organizacoes/templates/organizacoes/parceiro_propostas.html
@@ -32,7 +32,7 @@
 
   <div class="mt-4">
     <b>{% lng "Número Total de Propostas Registradas" "Total Number of Registered Proposals" %}:</b>
-    {{ projetos|length }}
+    {{ propostas|length }}
   </div>
 
 {% endblock %}
