--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -426,7 +426,7 @@
 
         <div id="lista_mentorias" class="lista_mentorias">
 
-          {% if eventos_academicos.mentorias %}
+          {% if mentorias %}
             {% nospaces %}
             <table class="tab_pfe">
               <thead><tr>
@@ -435,7 +435,7 @@
                 {% comment %} <th scope="col" class="cabec header_local_m">Local</th> {% endcomment %}
               </tr></thead>
               <tbody>
-                {% for aula in eventos_academicos.mentorias|dictsort:"endDate" %}
+                {% for aula in mentorias|dictsort:"endDate" %}
                   <tr id="ev{{aula.id}}" class="lin_mentorias ano{{aula.endDate.year}} semestre" data-mes="{{aula.endDate.month}}" data-dia="{{aula.endDate.day}}">
                       <th class="colu text-center" scope="row">
                         {% if user.eh_admin %}
@@ -511,29 +511,5 @@
   {% if user.eh_prof_a %}
     {% include "calendario/evento-modal.html" %}
   {% endif %}
-
-
-{% comment %} vvvvvv    REMOVER ESSA PARTE    vvvvvvv {% endcomment %}
-{% comment %} <script>
-  function showElements(els) {
-    els.forEach(el => {
-      if (el.classList.contains("lin_aulas")) {
-        el.style.display = "table-row";
-        if (!el.classList.contains('ano' + currentYear)) el.style.display = "none";
-      } else if (el.classList.contains("lin_mentorias")) {
-          el.style.display = "table-row";
-          if (!el.classList.contains('ano' + currentYear)) el.style.display = "none";
-      } else {
-        el.style.display = "inline";
-      }
-  
-      if (el.parentNode.classList.contains("ano" + currentYear)) {
-        if (el.classList.contains("lab")) $("#linha_lab").show();
-        if (el.classList.contains("prova")) $("#linha_provas").show();
-      }
-    });
-  }
-</script> {% endcomment %}
-{% comment %} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ {% endcomment %}
 
 {% endblock %}
