--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -135,16 +135,19 @@
 
               {% with coorientadores=projeto.coorientador_set.all %}
                 {% if coorientadores %}
+                  <div class="mb-2">
                   {% for coorientador in coorientadores %}
-                    <p class="coorientador ml-1"><b>Coorientador{% if coorientador.usuario.genero == 'F' %}a{% endif %}:</b>
-                    <a class="imprimir" href="{% url 'professor_detail' coorientador.usuario.professor.id %}">
-                      {{ coorientador.usuario.get_full_name }}
-                    </a>
-                    <span class="emails">
-                      <span class="texto-longo"><a href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a></span>
-                      <span class="texto-curto"><a href="mailto:{{coorientador.usuario.email}}"><i class="far fa-envelope"></i></a></span>
-                    </span>
+                    <div class="coorientador ml-1"><b>Coorientador{% if coorientador.usuario.genero == 'F' %}a{% endif %}:</b>
+                      <a class="imprimir" href="{% url 'professor_detail' coorientador.usuario.professor.id %}">
+                        {{ coorientador.usuario.get_full_name }}
+                      </a>
+                      <span class="emails">
+                        <span class="texto-longo"><a href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a></span>
+                        <span class="texto-curto"><a href="mailto:{{coorientador.usuario.email}}"><i class="far fa-envelope"></i></a></span>
+                      </span>
+                    </div>
                   {% endfor %}
+                  </div>
                 {% endif %}
               {% endwith %}
 
