--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -35,7 +35,12 @@
   {% include "edicoes.html" with com_cursos=True %}
   {% include "informacoes_ml.html" %}
   <br>
-  
+
+  {% if user.eh_admin %}
+    {% include "botao_adiciona.html" with url_add="adiciona_documento" txt_pt="Adicionar Novo Documento" txt_en="Add New Document" open_modal=True %}
+    {% include "base-modal.html" %}
+  {% endif %}
+
   <div id="atualizar">
     {% include "tabelas_top_ml.html" with tabela="Projetos" cabecalhos=cabecalhos %}
       {% for projeto in projetos %} 
@@ -98,18 +103,6 @@
       </caption>
     {% include "tabelas_bottom.html" %}
   </div>
-
-  {% if user.eh_admin %}
-    <span class="esconder">
-      <a  href="#"
-       class="open-modal" style="cursor:pointer;"
-          data-url="{% url 'adiciona_documento' %}"
-          ><i class="fas fa-plus"></i>
-          {% lng "Adicionar novo documento" "Add new document" %}
-        </a>
-    </span>
-    {% include "base-modal.html" %}
-  {% endif %}
 
   <script>
     function carrega_pagina() {
