--- a/documentos/templates/documentos/tabela_imagens.html
+++ b/documentos/templates/documentos/tabela_imagens.html
@@ -16,13 +16,7 @@
 {% block content %}
 
   {% if user.eh_admin %}
-    <span class="esconder">
-      <a href="#" class="open-modal" style="cursor:pointer;"
-      data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
-      ><i class="fas fa-plus"></i>
-        {% lng "Adicionar novo documento" "Add new document" %}
-      </a>
-    </span>
+    {% include "botao_adiciona.html" with url_add="adiciona_documento_tipo" url_param=tipo.sigla txt_pt="Adicionar Novo Documento" txt_en="Add New Document" open_modal=True %}   
     {% include "base-modal.html" %}
   {% endif %}
 
