--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -16,13 +16,7 @@
 {% block content %}
 
   {% if request.user.is_authenticated and request.user.eh_prof_a %}
-    <span class="esconder">
-      <a href="{% url 'bancas_criar'%}" class="open-modal" style="cursor:pointer;"
-      data-url="{% url 'bancas_criar' %}">
-        <i class="fas fa-plus"></i>
-        {% lng "Cadastrar Nova Banca" "Register New Examination Board" %}
-      </a>
-    </span>
+    {% include "botao_adiciona.html" with url_add="bancas_criar" txt_pt="Cadastrar Nova Banca" txt_en="Register New Examination Board" open_modal=True %}
   {% endif %}
   <br><br>
 
