--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -67,12 +67,7 @@
 
 {% block content %}
 
-  <span class="esconder">
-    <a href="{% url 'proposta_submissao' %}" style="cursor:pointer;">
-      <i class="fas fa-plus"></i>
-      {% lng "Adicionar Proposta" "Add Proposal" %}
-    </a>
-  </span>
+  {% include "botao_adiciona.html" with url_add="proposta_submissao" txt_pt="Adicionar Proposta" txt_en="Add Proposal" %}
 
   {% include "edicoes.html" %}
 
